Fix missing TelaNotificacoes import and Java version compatibility issues
Co-authored-by: LuisPassosRamos <129339010+LuisPassosRamos@users.noreply.github.com>